--- a/css/style.css
+++ b/css/style.css
@@ -53,16 +53,53 @@ body {
 .heading-primary {
 	color: #ffff;
 	text-transform: uppercase;
+
+	/* Fix shaking in animation */
+	backface-visibility: hidden;
 }
 .heading-primary-main {
 	display: block;
 	font-size: 60px;
 	letter-spacing: 35px;
 	font-weight: 400;
+	animation-name: moveInLeft;
+	animation-duration: 1s;
+	/* animation-delay: 3s; */
+	/* animation-iteration-count: 3; */
+	animation-timing-function: ease-out;
 }
 .heading-primary-sub {
 	display: block;
 	font-size: 20px;
 	letter-spacing: 17.4px;
 	font-weight: 700;
+	/* animation: name duration timing-function delay iteration-count direction fill-mode; */
+	animation: moveInRight 1s ease-out;
+}
+
+@keyframes moveInLeft {
+	0% {
+		opacity: 0;
+		transform: translateX(-100px);
+	}
+	80% {
+		transform: translateX(10px);
+	}
+	100% {
+		opacity: 1;
+		transform: translateX(0);
+	}
+}
+@keyframes moveInRight {
+	0% {
+		opacity: 0;
+		transform: translateX(100px);
+	}
+	80% {
+		transform: translateX(-10px);
+	}
+	100% {
+		opacity: 1;
+		transform: translateX(0);
+	}
 }
