--- a/css/style.css
+++ b/css/style.css
@@ -6,18 +6,24 @@ Medium green: #55c57a
 Dark green: #28b485
 
 */
-* {
+*,
+*::after,
+*::before {
 	margin: 0;
 	padding: 0;
-	box-sizing: border-box;
+	box-sizing: inherit;
+}
+html {
+	font-size: 62.5%;
 }
 body {
 	font-family: "Latto", sans-serif;
 	font-weight: 400;
-	font-size: 16px;
+	/* font-size: 1.6rem; */
 	line-height: 1.7;
 	color: #777;
-	padding: 30px;
+	padding: 3rem;
+	box-sizing: border-box;
 }
 
 .header {
@@ -36,12 +42,12 @@ body {
 
 .logo-box {
 	position: absolute;
-	top: 40px;
-	left: 40px;
+	top: 4rem;
+	left: 4rem;
 }
 
 .logo {
-	height: 35px;
+	height: 3.5rem;
 }
 .text-box {
 	position: absolute;
@@ -57,12 +63,12 @@ body {
 
 	/* Fix shaking in animation */
 	backface-visibility: hidden;
-	margin-bottom: 60px;
+	margin-bottom: 6rem;
 }
 .heading-primary-main {
 	display: block;
-	font-size: 60px;
-	letter-spacing: 35px;
+	font-size: 6rem;
+	letter-spacing: 3.5rem;
 	font-weight: 400;
 	animation-name: moveInLeft;
 	animation-duration: 1s;
@@ -72,8 +78,8 @@ body {
 }
 .heading-primary-sub {
 	display: block;
-	font-size: 20px;
-	letter-spacing: 17.4px;
+	font-size: 2rem;
+	letter-spacing: 1.75rem;
 	font-weight: 700;
 	/* animation: name duration timing-function delay iteration-count direction fill-mode; */
 	animation: moveInRight 1s ease-out;
@@ -82,10 +88,10 @@ body {
 @keyframes moveInLeft {
 	0% {
 		opacity: 0;
-		transform: translateX(-100px);
+		transform: translateX(-10rem);
 	}
 	80% {
-		transform: translateX(10px);
+		transform: translateX(1rem);
 	}
 	100% {
 		opacity: 1;
@@ -95,7 +101,7 @@ body {
 @keyframes moveInRight {
 	0% {
 		opacity: 0;
-		transform: translateX(100px);
+		transform: translateX(10rem);
 	}
 	80% {
 		transform: translateX(-10px);
@@ -108,7 +114,7 @@ body {
 @keyframes moveInBotton {
 	0% {
 		opacity: 0;
-		transform: translateY(30px);
+		transform: translateY(3rem);
 	}
 
 	100% {
@@ -120,19 +126,19 @@ body {
 btn:visited {
 	text-transform: uppercase;
 	text-decoration: none;
-	padding: 15px 40px;
+	padding: 1.5rem 4rem;
 	display: inline-block;
-	border-radius: 100px;
+	border-radius: 10rem;
 	transition: all 0.2s;
 	position: relative;
 }
 .btn:hover {
 	transform: translateY(-3px);
-	box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
+	box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.2);
 }
 .btn:active {
 	transform: translateY(-1px);
-	box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
+	box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.2);
 }
 .btn-white {
 	background-color: #fff;
@@ -144,7 +150,7 @@ btn:visited {
 	display: inline-block;
 	height: 100%;
 	width: 100%;
-	border-radius: 100px;
+	border-radius: 10rem;
 	position: absolute;
 	top: 0;
 	left: 0;
