--- a/css/style.css
+++ b/css/style.css
@@ -40,16 +40,16 @@ body {
 	position: relative;
 }
 
-.logo-box {
+.header__logo-box {
 	position: absolute;
 	top: 4rem;
 	left: 4rem;
 }
 
-.logo {
+.header__logo {
 	height: 3.5rem;
 }
-.text-box {
+.header__text-box {
 	position: absolute;
 	top: 40%;
 	left: 50%;
@@ -65,7 +65,7 @@ body {
 	backface-visibility: hidden;
 	margin-bottom: 6rem;
 }
-.heading-primary-main {
+.heading-primary--main {
 	display: block;
 	font-size: 6rem;
 	letter-spacing: 3.5rem;
@@ -76,7 +76,7 @@ body {
 	/* animation-iteration-count: 3; */
 	animation-timing-function: ease-out;
 }
-.heading-primary-sub {
+.heading-primary--sub {
 	display: block;
 	font-size: 2rem;
 	letter-spacing: 1.75rem;
@@ -140,7 +140,7 @@ btn:visited {
 	transform: translateY(-1px);
 	box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.2);
 }
-.btn-white {
+.btn--white {
 	background-color: #fff;
 	color: #777;
 }
@@ -157,14 +157,14 @@ btn:visited {
 	z-index: -1;
 	transition: all 0.4s;
 }
-.btn-white::after {
+.btn--white::after {
 	background-color: #fff;
 }
 .btn:hover::after {
 	transform: scaleX(1.4) scaleY(1.6);
 	opacity: 0;
 }
-.btn-animated {
+.btn--animated {
 	animation: moveInBotton 0.5s ease-out 0.75s;
 	/* animation fill-mode: automaticaly applies the 0% if set as backwards */
 	animation-fill-mode: backwards;
