updatedd about section

--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -6,7 +6,7 @@
 	box-sizing: inherit;
 }
 html {
-	// This defines what 1rem means
+	// This defines what 1rem means throughout the entire project
 	font-size: 62.5%;
 }
 body {
