--- a/sass/main.scss
+++ b/sass/main.scss
@@ -7,10 +7,11 @@
 @import "base/typography";
 @import "base/utilities";
 
-@import "pages/home";
-
 @import "components/button";
-@import "layout/header";
+@import "components/composition";
+@import "components/feature-box";
 
 @import "layout/grid";
-@import "components/composition";
+@import "layout/header";
+
+@import "pages/home";
