--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -1,4 +1,5 @@
 .card {
+	// functionality
 	perspective: 150rem;
 	-moz-perspective: 150rem;
 	position: relative;
@@ -15,7 +16,7 @@
 		width: 100%;
 		backface-visibility: hidden;
 		border-radius: 3px;
-		box-shadow: 0 1.5rem 4rem rbga($color-black, 0.3);
+		box-shadow: 0 1.5rem 4rem rgba($color-black, 0.15);
 		&--front {
 			background-color: $color-white;
 		}
@@ -34,9 +35,29 @@
 
 	// .card:hover .card__side
 	&:hover &__side--front {
-		transform: rotateY(180deg);
+		transform: rotateY(-180deg);
 	}
 	&:hover &__side--back {
 		transform: rotateY(0);
+	}
+	// front side styling
+	&__picture {
+		background-size: cover;
+		height: 23rem;
+		background-blend-mode: screen;
+		&--1 {
+			background-image: linear-gradient(
+					to right bottom,
+					$color-secondary-light,
+					$color-secondary-dark
+				),
+				url(../img/nat-5.jpg);
+		}
+		&--2 {
+			background-image: url(../img/nat-5.jpg);
+		}
+		&--3 {
+			background-image: url(../img/nat-5.jpg);
+		}
 	}
 }
