--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -3,12 +3,10 @@
 	perspective: 150rem;
 	-moz-perspective: 150rem;
 	position: relative;
-	height: 50rem;
+	height: 52rem;
 
 	&__side {
-		height: 50rem;
-		color: #ffff;
-		font-size: 2rem;
+		height: 52rem;
 		transition: all 0.8s ease;
 		position: absolute;
 		top: 0;
@@ -16,6 +14,7 @@
 		width: 100%;
 		backface-visibility: hidden;
 		border-radius: 3px;
+		overflow: hidden;
 		box-shadow: 0 1.5rem 4rem rgba($color-black, 0.15);
 		&--front {
 			background-color: $color-white;
@@ -45,6 +44,9 @@
 		background-size: cover;
 		height: 23rem;
 		background-blend-mode: screen;
+		// need to add the prefix (-webkit) to support in all the browsers
+		-webkit-clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
+		clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
 		&--1 {
 			background-image: linear-gradient(
 					to right bottom,
@@ -58,6 +60,50 @@
 		}
 		&--3 {
 			background-image: url(../img/nat-5.jpg);
+		}
+	}
+	&__heading {
+		font-size: 2.8rem;
+		font-weight: 300;
+		text-transform: uppercase;
+		color: $color-white;
+		position: absolute;
+		top: 10rem;
+		right: 20rem;
+		text-align: right;
+		width: 75%;
+	}
+
+	&__heading__span {
+		padding: 1rem 1.5rem;
+		position: inherit;
+		// box-decoration-break: applies the padding to all the blocks created as if they were different blocks
+		// -webkit-box-decoration-break: clone;
+		// box-decoration-break: clone;
+		&--1 {
+			padding: 1rem 1.5rem;
+			position: absolute;
+			background-image: linear-gradient(
+				to right bottom,
+				rgba($color-secondary-light, 0.85),
+				rgba($color-secondary-dark, 0.85)
+			);
+		}
+	}
+	&__details {
+		padding: 3rem;
+		ul {
+			list-style: none;
+			width: 80%;
+			margin: 0 auto;
+			li {
+				text-align: center;
+				font-size: 1.5rem;
+				padding: 1rem;
+				&:not(:last-child) {
+					border-bottom: 1px solid $color-grey-light-2;
+				}
+			}
 		}
 	}
 }
