--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -29,6 +29,20 @@
 					$color-secondary-dark
 				);
 			}
+			&-2 {
+				background-image: linear-gradient(
+					to right bottom,
+					$color-primary-light,
+					$color-primary-dark
+				);
+			}
+			&-3 {
+				background-image: linear-gradient(
+					to right bottom,
+					$color-tertiary-light,
+					$color-tertiary-dark
+				);
+			}
 		}
 	}
 
@@ -47,6 +61,8 @@
 		// need to add the prefix (-webkit) to support in all the browsers
 		-webkit-clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
 		clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
+		border-top-left-radius: 3px;
+		border-top-right-radius: 3px;
 		&--1 {
 			background-image: linear-gradient(
 					to right bottom,
@@ -56,33 +72,57 @@
 				url(../img/nat-5.jpg);
 		}
 		&--2 {
-			background-image: url(../img/nat-5.jpg);
+			background-image: linear-gradient(
+					to right bottom,
+					$color-primary-light,
+					$color-primary-dark
+				),
+				url(../img/nat-6.jpg);
 		}
 		&--3 {
-			background-image: url(../img/nat-5.jpg);
+			background-image: linear-gradient(
+					to right bottom,
+					$color-tertiary-light,
+					$color-tertiary-dark
+				),
+				url(../img/nat-7.jpg);
 		}
 	}
 	&__heading {
-		font-size: 2.8rem;
+		font-size: 2.3rem;
 		font-weight: 300;
 		text-transform: uppercase;
 		color: $color-white;
 		position: absolute;
-		top: 10rem;
-		right: 20rem;
+		top: 12.5rem;
+		right: 2rem;
 		text-align: right;
 		width: 75%;
 	}
 
-	&__heading__span {
-		padding: 1rem 1.5rem;
-		position: inherit;
+	&__heading-span {
 		// box-decoration-break: applies the padding to all the blocks created as if they were different blocks
-		// -webkit-box-decoration-break: clone;
-		// box-decoration-break: clone;
+		box-decoration-break: slice;
+		-webkit-box-decoration-break: slice;
 		&--1 {
 			padding: 1rem 1.5rem;
-			position: absolute;
+			background-image: linear-gradient(
+				to right bottom,
+				rgba($color-secondary-light, 0.85),
+				rgba($color-secondary-dark, 0.85)
+			);
+		}
+		&--2 {
+			padding: 1rem 1.5rem;
+			background-image: linear-gradient(
+				to right bottom,
+				rgba($color-secondary-light, 0.85),
+				rgba($color-secondary-dark, 0.85)
+			);
+		}
+
+		&--3 {
+			padding: 1rem 1.5rem;
 			background-image: linear-gradient(
 				to right bottom,
 				rgba($color-secondary-light, 0.85),
@@ -105,5 +145,25 @@
 				}
 			}
 		}
+	}
+	&__cta {
+		position: absolute;
+		top: 50%;
+		left: 50%;
+		transform: translate(-50%, -50%);
+		width: 90%;
+		text-align: center;
+	}
+	&__price-box {
+		text-align: center;
+		margin-bottom: 8rem;
+		color: $color-white;
+	}
+	&__price-only {
+		font-size: 1.4em;
+	}
+	&__price-value {
+		font-size: 6rem;
+		font-weight: 100;
 	}
 }
