--- a/sass/base/_utilities.scss
+++ b/sass/base/_utilities.scss
@@ -7,8 +7,11 @@
 .u-margin-bottom-medium {
 	margin-bottom: 4rem;
 }
-.u-margin-bottom-big {
+.u-margin-bottom-huge {
 	margin-bottom: 8rem;
+}
+.u-margin-bottom-small {
+	margin-bottom: 1.5rem;
 }
 .u-margin-top-big {
 	margin-top: 8rem;
