--- a/sass/components/_form.scss
+++ b/sass/components/_form.scss
@@ -6,19 +6,26 @@
 	&__input {
 		font-size: 1.5rem;
 		font-family: inherit;
+		color: inherit;
 		padding: 1.5rem 2rem;
 		border-radius: 2px;
 		background-color: rgba($color-white, 0.5);
+		border-bottom: 3px solid transparent;
 		border: none;
-		border: 3px solid transparent;
 		width: 100%;
-		display:block;
+		display: block;
+
+		&:focus {
+			outline: none;
+			box-shadow: 0 1rem 2rem rgba($color-black, 0.1);
+			border-bottom: 3px solid $color-primary;
+		}
+
+		&::-webkit-input-placeholder {
+			color: $color-gray-dark-2;
+		}
 	}
-	&__input:focus {
-		outline: none;
-		box-shadow: 0 1rem 2rem rgba($color-black, 0.1);
-		border: 3px solid $color-primary;
-	}
+
 	// &__label {
 
 	// }
