--- a/sass/components/_form.scss
+++ b/sass/components/_form.scss
@@ -20,13 +20,27 @@
 			box-shadow: 0 1rem 2rem rgba($color-black, 0.1);
 			border-bottom: 3px solid $color-primary;
 		}
+		&:focus:invalid {
+			border-bottom: 3px solid $color-secondary-dark;
+		}
 
 		&::-webkit-input-placeholder {
 			color: $color-gray-dark-2;
 		}
 	}
 
-	// &__label {
-
-	// }
+	&__label {
+		font-size: 1.2rem;
+		font-weight: 700;
+		margin-left: 2rem;
+		margin-top: 0.7rem;
+		display: block;
+		transition: all 0.3s;
+	}
+	// + refers to sibling selector
+	&__input:placeholder-shown + &__label {
+		opacity: 0;
+		visibility: hidden;
+		transform: translateY(-4rem);
+	}
 }
